methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:32: error: ';' expected but 'else' found.
     else{
     ^